<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude" />

    <EditText
        android:id="@+id/lat_text"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/number_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

    <EditText
        android:id="@+id/lon_text"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/number_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude" />

    <EditText
        android:id="@+id/alt_text"
        android:inputType="numberDecimal"
        android:hint="@string/number_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/service_status_text"
        android:gravity="center_horizontal"
        android:text="@string/service_disabled"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/provider_start"
        android:text="@string/start"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/provider_stop"
        android:text="@string/stop"
        android:clickable="false"
        android:focusable="true"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/open_map"
        android:text="@string/open_map"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/recent_location"
        android:text="@string/recent_location"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
